parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMAND

Grammar

Rule 0     S' -> totaldoc
Rule 1     totaldoc -> begindoc statements enddoc
Rule 2     begindoc -> BEGIN OB DOC CB NEWLINE
Rule 3     enddoc -> END OB DOC CB
Rule 4     statements -> statements statement
Rule 5     statements -> statement
Rule 6     statement -> SECTION OB statements CB
Rule 7     statement -> SUBSECTION OB statements CB
Rule 8     statement -> NEWLINE
Rule 9     statement -> TEXT
Rule 10    statement -> BOLD OB statements CB
Rule 11    statement -> ITALICS OB statements CB
Rule 12    mathstat -> FRAC OB mathstats CB OB mathstats CB
Rule 13    mathstat -> SQRT OB mathstats CB
Rule 14    statement -> UNDERLINE OB statements CB
Rule 15    statement -> CAPTION OB statements CB
Rule 16    statement -> DOLLAR mathstats DOLLAR
Rule 17    mathstats -> mathstats mathstat
Rule 18    mathstats -> mathstat
Rule 19    mathstats -> TEXT
Rule 20    statement -> PAR
Rule 21    beginenum -> BEGIN OB ENUMERATE CB
Rule 22    beginitemize -> BEGIN OB ITEMIZE CB
Rule 23    endenum -> END OB ENUMERATE CB
Rule 24    enditemize -> END OB ITEMIZE CB
Rule 25    statement -> beginenum statements endenum
Rule 26    statement -> beginitemize statements enditemize
Rule 27    statement -> ITEM statement
Rule 28    statement -> INCLUDEGRAPHICS OB TEXT CB
Rule 29    mathstat -> INT UNDERSCORE OB TEXT CB CARET OB TEXT CB mathstat
Rule 30    mathstat -> SUM UNDERSCORE OB TEXT CB CARET OB TEXT CB mathstat

Terminals, with rules where they appear

BEGIN                : 2 21 22
BOLD                 : 10
CAPTION              : 15
CARET                : 29 30
CB                   : 2 3 6 7 10 11 12 12 13 14 15 21 22 23 24 28 29 29 30 30
COMMAND              : 
DOC                  : 2 3
DOLLAR               : 16 16
END                  : 3 23 24
ENUMERATE            : 21 23
FRAC                 : 12
INCLUDEGRAPHICS      : 28
INT                  : 29
ITALICS              : 11
ITEM                 : 27
ITEMIZE              : 22 24
NEWLINE              : 2 8
OB                   : 2 3 6 7 10 11 12 12 13 14 15 21 22 23 24 28 29 29 30 30
PAR                  : 20
SECTION              : 6
SQRT                 : 13
SUBSECTION           : 7
SUM                  : 30
TEXT                 : 9 19 28 29 29 30 30
UNDERLINE            : 14
UNDERSCORE           : 29 30
error                : 

Nonterminals, with rules where they appear

begindoc             : 1
beginenum            : 25
beginitemize         : 26
enddoc               : 1
endenum              : 25
enditemize           : 26
mathstat             : 17 18 29 30
mathstats            : 12 12 13 16 17
statement            : 4 5 27
statements           : 1 4 6 7 10 11 14 15 25 26
totaldoc             : 0

Parsing method: LALR

state 0

    (0) S' -> . totaldoc
    (1) totaldoc -> . begindoc statements enddoc
    (2) begindoc -> . BEGIN OB DOC CB NEWLINE

    BEGIN           shift and go to state 3

    totaldoc                       shift and go to state 1
    begindoc                       shift and go to state 2

state 1

    (0) S' -> totaldoc .



state 2

    (1) totaldoc -> begindoc . statements enddoc
    (4) statements -> . statements statement
    (5) statements -> . statement
    (6) statement -> . SECTION OB statements CB
    (7) statement -> . SUBSECTION OB statements CB
    (8) statement -> . NEWLINE
    (9) statement -> . TEXT
    (10) statement -> . BOLD OB statements CB
    (11) statement -> . ITALICS OB statements CB
    (14) statement -> . UNDERLINE OB statements CB
    (15) statement -> . CAPTION OB statements CB
    (16) statement -> . DOLLAR mathstats DOLLAR
    (20) statement -> . PAR
    (25) statement -> . beginenum statements endenum
    (26) statement -> . beginitemize statements enditemize
    (27) statement -> . ITEM statement
    (28) statement -> . INCLUDEGRAPHICS OB TEXT CB
    (21) beginenum -> . BEGIN OB ENUMERATE CB
    (22) beginitemize -> . BEGIN OB ITEMIZE CB

    SECTION         shift and go to state 6
    SUBSECTION      shift and go to state 7
    NEWLINE         shift and go to state 8
    TEXT            shift and go to state 9
    BOLD            shift and go to state 10
    ITALICS         shift and go to state 11
    UNDERLINE       shift and go to state 12
    CAPTION         shift and go to state 13
    DOLLAR          shift and go to state 14
    PAR             shift and go to state 15
    ITEM            shift and go to state 18
    INCLUDEGRAPHICS shift and go to state 19
    BEGIN           shift and go to state 20

    statements                     shift and go to state 4
    statement                      shift and go to state 5
    beginenum                      shift and go to state 16
    beginitemize                   shift and go to state 17

state 3

    (2) begindoc -> BEGIN . OB DOC CB NEWLINE

    OB              shift and go to state 21


state 4

    (1) totaldoc -> begindoc statements . enddoc
    (4) statements -> statements . statement
    (3) enddoc -> . END OB DOC CB
    (6) statement -> . SECTION OB statements CB
    (7) statement -> . SUBSECTION OB statements CB
    (8) statement -> . NEWLINE
    (9) statement -> . TEXT
    (10) statement -> . BOLD OB statements CB
    (11) statement -> . ITALICS OB statements CB
    (14) statement -> . UNDERLINE OB statements CB
    (15) statement -> . CAPTION OB statements CB
    (16) statement -> . DOLLAR mathstats DOLLAR
    (20) statement -> . PAR
    (25) statement -> . beginenum statements endenum
    (26) statement -> . beginitemize statements enditemize
    (27) statement -> . ITEM statement
    (28) statement -> . INCLUDEGRAPHICS OB TEXT CB
    (21) beginenum -> . BEGIN OB ENUMERATE CB
    (22) beginitemize -> . BEGIN OB ITEMIZE CB

    END             shift and go to state 24
    SECTION         shift and go to state 6
    SUBSECTION      shift and go to state 7
    NEWLINE         shift and go to state 8
    TEXT            shift and go to state 9
    BOLD            shift and go to state 10
    ITALICS         shift and go to state 11
    UNDERLINE       shift and go to state 12
    CAPTION         shift and go to state 13
    DOLLAR          shift and go to state 14
    PAR             shift and go to state 15
    ITEM            shift and go to state 18
    INCLUDEGRAPHICS shift and go to state 19
    BEGIN           shift and go to state 20

    enddoc                         shift and go to state 22
    statement                      shift and go to state 23
    beginenum                      shift and go to state 16
    beginitemize                   shift and go to state 17

state 5

    (5) statements -> statement .

    END             reduce using rule 5 (statements -> statement .)
    SECTION         reduce using rule 5 (statements -> statement .)
    SUBSECTION      reduce using rule 5 (statements -> statement .)
    NEWLINE         reduce using rule 5 (statements -> statement .)
    TEXT            reduce using rule 5 (statements -> statement .)
    BOLD            reduce using rule 5 (statements -> statement .)
    ITALICS         reduce using rule 5 (statements -> statement .)
    UNDERLINE       reduce using rule 5 (statements -> statement .)
    CAPTION         reduce using rule 5 (statements -> statement .)
    DOLLAR          reduce using rule 5 (statements -> statement .)
    PAR             reduce using rule 5 (statements -> statement .)
    ITEM            reduce using rule 5 (statements -> statement .)
    INCLUDEGRAPHICS reduce using rule 5 (statements -> statement .)
    BEGIN           reduce using rule 5 (statements -> statement .)
    CB              reduce using rule 5 (statements -> statement .)


state 6

    (6) statement -> SECTION . OB statements CB

    OB              shift and go to state 25


state 7

    (7) statement -> SUBSECTION . OB statements CB

    OB              shift and go to state 26


state 8

    (8) statement -> NEWLINE .

    END             reduce using rule 8 (statement -> NEWLINE .)
    SECTION         reduce using rule 8 (statement -> NEWLINE .)
    SUBSECTION      reduce using rule 8 (statement -> NEWLINE .)
    NEWLINE         reduce using rule 8 (statement -> NEWLINE .)
    TEXT            reduce using rule 8 (statement -> NEWLINE .)
    BOLD            reduce using rule 8 (statement -> NEWLINE .)
    ITALICS         reduce using rule 8 (statement -> NEWLINE .)
    UNDERLINE       reduce using rule 8 (statement -> NEWLINE .)
    CAPTION         reduce using rule 8 (statement -> NEWLINE .)
    DOLLAR          reduce using rule 8 (statement -> NEWLINE .)
    PAR             reduce using rule 8 (statement -> NEWLINE .)
    ITEM            reduce using rule 8 (statement -> NEWLINE .)
    INCLUDEGRAPHICS reduce using rule 8 (statement -> NEWLINE .)
    BEGIN           reduce using rule 8 (statement -> NEWLINE .)
    CB              reduce using rule 8 (statement -> NEWLINE .)


state 9

    (9) statement -> TEXT .

    END             reduce using rule 9 (statement -> TEXT .)
    SECTION         reduce using rule 9 (statement -> TEXT .)
    SUBSECTION      reduce using rule 9 (statement -> TEXT .)
    NEWLINE         reduce using rule 9 (statement -> TEXT .)
    TEXT            reduce using rule 9 (statement -> TEXT .)
    BOLD            reduce using rule 9 (statement -> TEXT .)
    ITALICS         reduce using rule 9 (statement -> TEXT .)
    UNDERLINE       reduce using rule 9 (statement -> TEXT .)
    CAPTION         reduce using rule 9 (statement -> TEXT .)
    DOLLAR          reduce using rule 9 (statement -> TEXT .)
    PAR             reduce using rule 9 (statement -> TEXT .)
    ITEM            reduce using rule 9 (statement -> TEXT .)
    INCLUDEGRAPHICS reduce using rule 9 (statement -> TEXT .)
    BEGIN           reduce using rule 9 (statement -> TEXT .)
    CB              reduce using rule 9 (statement -> TEXT .)


state 10

    (10) statement -> BOLD . OB statements CB

    OB              shift and go to state 27


state 11

    (11) statement -> ITALICS . OB statements CB

    OB              shift and go to state 28


state 12

    (14) statement -> UNDERLINE . OB statements CB

    OB              shift and go to state 29


state 13

    (15) statement -> CAPTION . OB statements CB

    OB              shift and go to state 30


state 14

    (16) statement -> DOLLAR . mathstats DOLLAR
    (17) mathstats -> . mathstats mathstat
    (18) mathstats -> . mathstat
    (19) mathstats -> . TEXT
    (12) mathstat -> . FRAC OB mathstats CB OB mathstats CB
    (13) mathstat -> . SQRT OB mathstats CB
    (29) mathstat -> . INT UNDERSCORE OB TEXT CB CARET OB TEXT CB mathstat
    (30) mathstat -> . SUM UNDERSCORE OB TEXT CB CARET OB TEXT CB mathstat

    TEXT            shift and go to state 33
    FRAC            shift and go to state 34
    SQRT            shift and go to state 35
    INT             shift and go to state 36
    SUM             shift and go to state 37

    mathstats                      shift and go to state 31
    mathstat                       shift and go to state 32

state 15

    (20) statement -> PAR .

    END             reduce using rule 20 (statement -> PAR .)
    SECTION         reduce using rule 20 (statement -> PAR .)
    SUBSECTION      reduce using rule 20 (statement -> PAR .)
    NEWLINE         reduce using rule 20 (statement -> PAR .)
    TEXT            reduce using rule 20 (statement -> PAR .)
    BOLD            reduce using rule 20 (statement -> PAR .)
    ITALICS         reduce using rule 20 (statement -> PAR .)
    UNDERLINE       reduce using rule 20 (statement -> PAR .)
    CAPTION         reduce using rule 20 (statement -> PAR .)
    DOLLAR          reduce using rule 20 (statement -> PAR .)
    PAR             reduce using rule 20 (statement -> PAR .)
    ITEM            reduce using rule 20 (statement -> PAR .)
    INCLUDEGRAPHICS reduce using rule 20 (statement -> PAR .)
    BEGIN           reduce using rule 20 (statement -> PAR .)
    CB              reduce using rule 20 (statement -> PAR .)


state 16

    (25) statement -> beginenum . statements endenum
    (4) statements -> . statements statement
    (5) statements -> . statement
    (6) statement -> . SECTION OB statements CB
    (7) statement -> . SUBSECTION OB statements CB
    (8) statement -> . NEWLINE
    (9) statement -> . TEXT
    (10) statement -> . BOLD OB statements CB
    (11) statement -> . ITALICS OB statements CB
    (14) statement -> . UNDERLINE OB statements CB
    (15) statement -> . CAPTION OB statements CB
    (16) statement -> . DOLLAR mathstats DOLLAR
    (20) statement -> . PAR
    (25) statement -> . beginenum statements endenum
    (26) statement -> . beginitemize statements enditemize
    (27) statement -> . ITEM statement
    (28) statement -> . INCLUDEGRAPHICS OB TEXT CB
    (21) beginenum -> . BEGIN OB ENUMERATE CB
    (22) beginitemize -> . BEGIN OB ITEMIZE CB

    SECTION         shift and go to state 6
    SUBSECTION      shift and go to state 7
    NEWLINE         shift and go to state 8
    TEXT            shift and go to state 9
    BOLD            shift and go to state 10
    ITALICS         shift and go to state 11
    UNDERLINE       shift and go to state 12
    CAPTION         shift and go to state 13
    DOLLAR          shift and go to state 14
    PAR             shift and go to state 15
    ITEM            shift and go to state 18
    INCLUDEGRAPHICS shift and go to state 19
    BEGIN           shift and go to state 20

    beginenum                      shift and go to state 16
    statements                     shift and go to state 38
    statement                      shift and go to state 5
    beginitemize                   shift and go to state 17

state 17

    (26) statement -> beginitemize . statements enditemize
    (4) statements -> . statements statement
    (5) statements -> . statement
    (6) statement -> . SECTION OB statements CB
    (7) statement -> . SUBSECTION OB statements CB
    (8) statement -> . NEWLINE
    (9) statement -> . TEXT
    (10) statement -> . BOLD OB statements CB
    (11) statement -> . ITALICS OB statements CB
    (14) statement -> . UNDERLINE OB statements CB
    (15) statement -> . CAPTION OB statements CB
    (16) statement -> . DOLLAR mathstats DOLLAR
    (20) statement -> . PAR
    (25) statement -> . beginenum statements endenum
    (26) statement -> . beginitemize statements enditemize
    (27) statement -> . ITEM statement
    (28) statement -> . INCLUDEGRAPHICS OB TEXT CB
    (21) beginenum -> . BEGIN OB ENUMERATE CB
    (22) beginitemize -> . BEGIN OB ITEMIZE CB

    SECTION         shift and go to state 6
    SUBSECTION      shift and go to state 7
    NEWLINE         shift and go to state 8
    TEXT            shift and go to state 9
    BOLD            shift and go to state 10
    ITALICS         shift and go to state 11
    UNDERLINE       shift and go to state 12
    CAPTION         shift and go to state 13
    DOLLAR          shift and go to state 14
    PAR             shift and go to state 15
    ITEM            shift and go to state 18
    INCLUDEGRAPHICS shift and go to state 19
    BEGIN           shift and go to state 20

    beginitemize                   shift and go to state 17
    statements                     shift and go to state 39
    statement                      shift and go to state 5
    beginenum                      shift and go to state 16

state 18

    (27) statement -> ITEM . statement
    (6) statement -> . SECTION OB statements CB
    (7) statement -> . SUBSECTION OB statements CB
    (8) statement -> . NEWLINE
    (9) statement -> . TEXT
    (10) statement -> . BOLD OB statements CB
    (11) statement -> . ITALICS OB statements CB
    (14) statement -> . UNDERLINE OB statements CB
    (15) statement -> . CAPTION OB statements CB
    (16) statement -> . DOLLAR mathstats DOLLAR
    (20) statement -> . PAR
    (25) statement -> . beginenum statements endenum
    (26) statement -> . beginitemize statements enditemize
    (27) statement -> . ITEM statement
    (28) statement -> . INCLUDEGRAPHICS OB TEXT CB
    (21) beginenum -> . BEGIN OB ENUMERATE CB
    (22) beginitemize -> . BEGIN OB ITEMIZE CB

    SECTION         shift and go to state 6
    SUBSECTION      shift and go to state 7
    NEWLINE         shift and go to state 8
    TEXT            shift and go to state 9
    BOLD            shift and go to state 10
    ITALICS         shift and go to state 11
    UNDERLINE       shift and go to state 12
    CAPTION         shift and go to state 13
    DOLLAR          shift and go to state 14
    PAR             shift and go to state 15
    ITEM            shift and go to state 18
    INCLUDEGRAPHICS shift and go to state 19
    BEGIN           shift and go to state 20

    statement                      shift and go to state 40
    beginenum                      shift and go to state 16
    beginitemize                   shift and go to state 17

state 19

    (28) statement -> INCLUDEGRAPHICS . OB TEXT CB

    OB              shift and go to state 41


state 20

    (21) beginenum -> BEGIN . OB ENUMERATE CB
    (22) beginitemize -> BEGIN . OB ITEMIZE CB

    OB              shift and go to state 42


state 21

    (2) begindoc -> BEGIN OB . DOC CB NEWLINE

    DOC             shift and go to state 43


state 22

    (1) totaldoc -> begindoc statements enddoc .

    $end            reduce using rule 1 (totaldoc -> begindoc statements enddoc .)


state 23

    (4) statements -> statements statement .

    END             reduce using rule 4 (statements -> statements statement .)
    SECTION         reduce using rule 4 (statements -> statements statement .)
    SUBSECTION      reduce using rule 4 (statements -> statements statement .)
    NEWLINE         reduce using rule 4 (statements -> statements statement .)
    TEXT            reduce using rule 4 (statements -> statements statement .)
    BOLD            reduce using rule 4 (statements -> statements statement .)
    ITALICS         reduce using rule 4 (statements -> statements statement .)
    UNDERLINE       reduce using rule 4 (statements -> statements statement .)
    CAPTION         reduce using rule 4 (statements -> statements statement .)
    DOLLAR          reduce using rule 4 (statements -> statements statement .)
    PAR             reduce using rule 4 (statements -> statements statement .)
    ITEM            reduce using rule 4 (statements -> statements statement .)
    INCLUDEGRAPHICS reduce using rule 4 (statements -> statements statement .)
    BEGIN           reduce using rule 4 (statements -> statements statement .)
    CB              reduce using rule 4 (statements -> statements statement .)


state 24

    (3) enddoc -> END . OB DOC CB

    OB              shift and go to state 44


state 25

    (6) statement -> SECTION OB . statements CB
    (4) statements -> . statements statement
    (5) statements -> . statement
    (6) statement -> . SECTION OB statements CB
    (7) statement -> . SUBSECTION OB statements CB
    (8) statement -> . NEWLINE
    (9) statement -> . TEXT
    (10) statement -> . BOLD OB statements CB
    (11) statement -> . ITALICS OB statements CB
    (14) statement -> . UNDERLINE OB statements CB
    (15) statement -> . CAPTION OB statements CB
    (16) statement -> . DOLLAR mathstats DOLLAR
    (20) statement -> . PAR
    (25) statement -> . beginenum statements endenum
    (26) statement -> . beginitemize statements enditemize
    (27) statement -> . ITEM statement
    (28) statement -> . INCLUDEGRAPHICS OB TEXT CB
    (21) beginenum -> . BEGIN OB ENUMERATE CB
    (22) beginitemize -> . BEGIN OB ITEMIZE CB

    SECTION         shift and go to state 6
    SUBSECTION      shift and go to state 7
    NEWLINE         shift and go to state 8
    TEXT            shift and go to state 9
    BOLD            shift and go to state 10
    ITALICS         shift and go to state 11
    UNDERLINE       shift and go to state 12
    CAPTION         shift and go to state 13
    DOLLAR          shift and go to state 14
    PAR             shift and go to state 15
    ITEM            shift and go to state 18
    INCLUDEGRAPHICS shift and go to state 19
    BEGIN           shift and go to state 20

    statements                     shift and go to state 45
    statement                      shift and go to state 5
    beginenum                      shift and go to state 16
    beginitemize                   shift and go to state 17

state 26

    (7) statement -> SUBSECTION OB . statements CB
    (4) statements -> . statements statement
    (5) statements -> . statement
    (6) statement -> . SECTION OB statements CB
    (7) statement -> . SUBSECTION OB statements CB
    (8) statement -> . NEWLINE
    (9) statement -> . TEXT
    (10) statement -> . BOLD OB statements CB
    (11) statement -> . ITALICS OB statements CB
    (14) statement -> . UNDERLINE OB statements CB
    (15) statement -> . CAPTION OB statements CB
    (16) statement -> . DOLLAR mathstats DOLLAR
    (20) statement -> . PAR
    (25) statement -> . beginenum statements endenum
    (26) statement -> . beginitemize statements enditemize
    (27) statement -> . ITEM statement
    (28) statement -> . INCLUDEGRAPHICS OB TEXT CB
    (21) beginenum -> . BEGIN OB ENUMERATE CB
    (22) beginitemize -> . BEGIN OB ITEMIZE CB

    SECTION         shift and go to state 6
    SUBSECTION      shift and go to state 7
    NEWLINE         shift and go to state 8
    TEXT            shift and go to state 9
    BOLD            shift and go to state 10
    ITALICS         shift and go to state 11
    UNDERLINE       shift and go to state 12
    CAPTION         shift and go to state 13
    DOLLAR          shift and go to state 14
    PAR             shift and go to state 15
    ITEM            shift and go to state 18
    INCLUDEGRAPHICS shift and go to state 19
    BEGIN           shift and go to state 20

    statements                     shift and go to state 46
    statement                      shift and go to state 5
    beginenum                      shift and go to state 16
    beginitemize                   shift and go to state 17

state 27

    (10) statement -> BOLD OB . statements CB
    (4) statements -> . statements statement
    (5) statements -> . statement
    (6) statement -> . SECTION OB statements CB
    (7) statement -> . SUBSECTION OB statements CB
    (8) statement -> . NEWLINE
    (9) statement -> . TEXT
    (10) statement -> . BOLD OB statements CB
    (11) statement -> . ITALICS OB statements CB
    (14) statement -> . UNDERLINE OB statements CB
    (15) statement -> . CAPTION OB statements CB
    (16) statement -> . DOLLAR mathstats DOLLAR
    (20) statement -> . PAR
    (25) statement -> . beginenum statements endenum
    (26) statement -> . beginitemize statements enditemize
    (27) statement -> . ITEM statement
    (28) statement -> . INCLUDEGRAPHICS OB TEXT CB
    (21) beginenum -> . BEGIN OB ENUMERATE CB
    (22) beginitemize -> . BEGIN OB ITEMIZE CB

    SECTION         shift and go to state 6
    SUBSECTION      shift and go to state 7
    NEWLINE         shift and go to state 8
    TEXT            shift and go to state 9
    BOLD            shift and go to state 10
    ITALICS         shift and go to state 11
    UNDERLINE       shift and go to state 12
    CAPTION         shift and go to state 13
    DOLLAR          shift and go to state 14
    PAR             shift and go to state 15
    ITEM            shift and go to state 18
    INCLUDEGRAPHICS shift and go to state 19
    BEGIN           shift and go to state 20

    statements                     shift and go to state 47
    statement                      shift and go to state 5
    beginenum                      shift and go to state 16
    beginitemize                   shift and go to state 17

state 28

    (11) statement -> ITALICS OB . statements CB
    (4) statements -> . statements statement
    (5) statements -> . statement
    (6) statement -> . SECTION OB statements CB
    (7) statement -> . SUBSECTION OB statements CB
    (8) statement -> . NEWLINE
    (9) statement -> . TEXT
    (10) statement -> . BOLD OB statements CB
    (11) statement -> . ITALICS OB statements CB
    (14) statement -> . UNDERLINE OB statements CB
    (15) statement -> . CAPTION OB statements CB
    (16) statement -> . DOLLAR mathstats DOLLAR
    (20) statement -> . PAR
    (25) statement -> . beginenum statements endenum
    (26) statement -> . beginitemize statements enditemize
    (27) statement -> . ITEM statement
    (28) statement -> . INCLUDEGRAPHICS OB TEXT CB
    (21) beginenum -> . BEGIN OB ENUMERATE CB
    (22) beginitemize -> . BEGIN OB ITEMIZE CB

    SECTION         shift and go to state 6
    SUBSECTION      shift and go to state 7
    NEWLINE         shift and go to state 8
    TEXT            shift and go to state 9
    BOLD            shift and go to state 10
    ITALICS         shift and go to state 11
    UNDERLINE       shift and go to state 12
    CAPTION         shift and go to state 13
    DOLLAR          shift and go to state 14
    PAR             shift and go to state 15
    ITEM            shift and go to state 18
    INCLUDEGRAPHICS shift and go to state 19
    BEGIN           shift and go to state 20

    statements                     shift and go to state 48
    statement                      shift and go to state 5
    beginenum                      shift and go to state 16
    beginitemize                   shift and go to state 17

state 29

    (14) statement -> UNDERLINE OB . statements CB
    (4) statements -> . statements statement
    (5) statements -> . statement
    (6) statement -> . SECTION OB statements CB
    (7) statement -> . SUBSECTION OB statements CB
    (8) statement -> . NEWLINE
    (9) statement -> . TEXT
    (10) statement -> . BOLD OB statements CB
    (11) statement -> . ITALICS OB statements CB
    (14) statement -> . UNDERLINE OB statements CB
    (15) statement -> . CAPTION OB statements CB
    (16) statement -> . DOLLAR mathstats DOLLAR
    (20) statement -> . PAR
    (25) statement -> . beginenum statements endenum
    (26) statement -> . beginitemize statements enditemize
    (27) statement -> . ITEM statement
    (28) statement -> . INCLUDEGRAPHICS OB TEXT CB
    (21) beginenum -> . BEGIN OB ENUMERATE CB
    (22) beginitemize -> . BEGIN OB ITEMIZE CB

    SECTION         shift and go to state 6
    SUBSECTION      shift and go to state 7
    NEWLINE         shift and go to state 8
    TEXT            shift and go to state 9
    BOLD            shift and go to state 10
    ITALICS         shift and go to state 11
    UNDERLINE       shift and go to state 12
    CAPTION         shift and go to state 13
    DOLLAR          shift and go to state 14
    PAR             shift and go to state 15
    ITEM            shift and go to state 18
    INCLUDEGRAPHICS shift and go to state 19
    BEGIN           shift and go to state 20

    statements                     shift and go to state 49
    statement                      shift and go to state 5
    beginenum                      shift and go to state 16
    beginitemize                   shift and go to state 17

state 30

    (15) statement -> CAPTION OB . statements CB
    (4) statements -> . statements statement
    (5) statements -> . statement
    (6) statement -> . SECTION OB statements CB
    (7) statement -> . SUBSECTION OB statements CB
    (8) statement -> . NEWLINE
    (9) statement -> . TEXT
    (10) statement -> . BOLD OB statements CB
    (11) statement -> . ITALICS OB statements CB
    (14) statement -> . UNDERLINE OB statements CB
    (15) statement -> . CAPTION OB statements CB
    (16) statement -> . DOLLAR mathstats DOLLAR
    (20) statement -> . PAR
    (25) statement -> . beginenum statements endenum
    (26) statement -> . beginitemize statements enditemize
    (27) statement -> . ITEM statement
    (28) statement -> . INCLUDEGRAPHICS OB TEXT CB
    (21) beginenum -> . BEGIN OB ENUMERATE CB
    (22) beginitemize -> . BEGIN OB ITEMIZE CB

    SECTION         shift and go to state 6
    SUBSECTION      shift and go to state 7
    NEWLINE         shift and go to state 8
    TEXT            shift and go to state 9
    BOLD            shift and go to state 10
    ITALICS         shift and go to state 11
    UNDERLINE       shift and go to state 12
    CAPTION         shift and go to state 13
    DOLLAR          shift and go to state 14
    PAR             shift and go to state 15
    ITEM            shift and go to state 18
    INCLUDEGRAPHICS shift and go to state 19
    BEGIN           shift and go to state 20

    statements                     shift and go to state 50
    statement                      shift and go to state 5
    beginenum                      shift and go to state 16
    beginitemize                   shift and go to state 17

state 31

    (16) statement -> DOLLAR mathstats . DOLLAR
    (17) mathstats -> mathstats . mathstat
    (12) mathstat -> . FRAC OB mathstats CB OB mathstats CB
    (13) mathstat -> . SQRT OB mathstats CB
    (29) mathstat -> . INT UNDERSCORE OB TEXT CB CARET OB TEXT CB mathstat
    (30) mathstat -> . SUM UNDERSCORE OB TEXT CB CARET OB TEXT CB mathstat

    DOLLAR          shift and go to state 51
    FRAC            shift and go to state 34
    SQRT            shift and go to state 35
    INT             shift and go to state 36
    SUM             shift and go to state 37

    mathstat                       shift and go to state 52

state 32

    (18) mathstats -> mathstat .

    DOLLAR          reduce using rule 18 (mathstats -> mathstat .)
    FRAC            reduce using rule 18 (mathstats -> mathstat .)
    SQRT            reduce using rule 18 (mathstats -> mathstat .)
    INT             reduce using rule 18 (mathstats -> mathstat .)
    SUM             reduce using rule 18 (mathstats -> mathstat .)
    CB              reduce using rule 18 (mathstats -> mathstat .)


state 33

    (19) mathstats -> TEXT .

    DOLLAR          reduce using rule 19 (mathstats -> TEXT .)
    FRAC            reduce using rule 19 (mathstats -> TEXT .)
    SQRT            reduce using rule 19 (mathstats -> TEXT .)
    INT             reduce using rule 19 (mathstats -> TEXT .)
    SUM             reduce using rule 19 (mathstats -> TEXT .)
    CB              reduce using rule 19 (mathstats -> TEXT .)


state 34

    (12) mathstat -> FRAC . OB mathstats CB OB mathstats CB

    OB              shift and go to state 53


state 35

    (13) mathstat -> SQRT . OB mathstats CB

    OB              shift and go to state 54


state 36

    (29) mathstat -> INT . UNDERSCORE OB TEXT CB CARET OB TEXT CB mathstat

    UNDERSCORE      shift and go to state 55


state 37

    (30) mathstat -> SUM . UNDERSCORE OB TEXT CB CARET OB TEXT CB mathstat

    UNDERSCORE      shift and go to state 56


state 38
